Add dynamic charts

--- a/template.html
+++ b/template.html
@@ -201,7 +201,8 @@ function helloWorld(world) {
       <h2>Slide with Image</h2>
     </hgroup>
     <article>
-      <img src="images/chart.png" class="reflect" alt="Description" title="Description">
+      <img src="http://chart.googleapis.com/chart?chs=600x325&cht=p&chd=s:Uf9a&chdl=30°|40°|50°|60°"
+       class="reflect" alt="Description" title="Description">
       <footer class="source">source: place source info here</footer>
     </article>
   </slide>
@@ -211,7 +212,8 @@ function helloWorld(world) {
       <h2>Slide with Image (Centered horz/vert)</h2>
     </hgroup>
     <article class="flexbox vcenter">
-      <img src="images/barchart.png" alt="Description" title="Description">
+      <img src="http://chart.googleapis.com/chart?chs=600x325&cht=p&chd=s:Uf9a&chdl=30°|40°|50°|60°"
+       alt="Description" title="Description">
       <footer class="source">source: place source info here</footer>
     </article>
   </slide>
